Quote and Product section done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@700&family=Open+Sans&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="/assets/css/style.min.css" />
@@ -32,31 +33,36 @@
             </div>
         </div>
         <!-- Nav code end -->
-
-        <section class="banner-section">            
+        <!-- Banner section code -->
+        <section class="banner-section">
             <div class="banner-inner mainContainer">
                 <div class="banner-left">
                     <img src="/assets/images/banner-bg.jpg" alt="">
                 </div>
                 <div class="banner-right">
                     <h1>Natural Coffee<span class="lineBr">Roasting</span></h1>
-                    <p class="banner-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class="banner-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                        officia deserunt mollit anim id est laborum.</p>
                     <a href="" class="btn header-btn">Learn More</a>
                 </div>
             </div>
         </section>
+        <!-- Banner section code -->
 
-
-
-        <section class="choose-section">            
+        <!-- Choose section code -->
+        <section class="choose-section">
             <div class="mainContainer choose-section-inner">
                 <div class="left-text">
                     <h2>Why Choosing<span class="lineBr">Our Coffee</span></h2>
                     <div class="list-type-text">
                         <ul>
-                            <li><img src="/assets/images/icon-square-pink.png" alt=""> Excepteur sint occaecat cupidatat non proident</li>
-                            <li><img src="/assets/images/icon-traiangle-pink.png" alt="">Ullamcorper dignissim cras tincidunt lobortis feugiat eget.</li>
-                            <li><img src="/assets/images/icon-circle-pink.png" alt="">At lectus urna duis convallis, kuat dilakoni ora kuat ditinggal ngopi</li>
+                            <li><img src="/assets/images/icon-square-pink.png" alt=""> Excepteur sint occaecat cupidatat
+                                non proident</li>
+                            <li><img src="/assets/images/icon-traiangle-pink.png" alt="">Ullamcorper dignissim cras
+                                tincidunt lobortis feugiat eget.</li>
+                            <li><img src="/assets/images/icon-circle-pink.png" alt="">At lectus urna duis convallis,
+                                kuat dilakoni ora kuat ditinggal ngopi</li>
                         </ul>
                     </div>
                 </div>
@@ -66,6 +72,102 @@
             </div>
         </section>
 
+        <!-- Choose section code -->
+
+        <!-- Quote section code -->
+
+
+        <section class="quote-section">
+            <div class="mainContainer quote-section-inner">
+                <div class="quote">
+                    <img class="icon-quote" src="/assets/images/icon-quote-pink.png" alt="">
+                    <h3>I like coffee because it gives me the <span class="lineBr">illusion that I might be
+                            awake.</span></h3>
+                    <h4>-Lewis Black-</h4>
+                </div>
+            </div>
+        </section>
+
+        <!-- Quote section code -->
+
+        <!-- Our Product section code -->
+
+
+        <section class="product-section">
+            <div class="mainContainer quote-section-inner">
+                <div class="produt-bg"></div>
+                <div class="product">
+                    <div class="headline">
+                        <h2>Our Product</h2>
+                        <div class="carousel-icons">
+                            <a href=""><i class="fa-solid fa-chevron-left"></i></a>
+                            <a href=""><i class="fa-solid fa-chevron-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="carousel-wrap">
+                        <div class="product-carousel">
+                            <div class="single-product-item">
+                                <div class="product-left">
+                                    <img src="./assets/images/product-1.png" alt="">
+                                </div>
+                                <div class="product-right bg-pink">
+                                    <h4>Americano</h4>
+                                    <p>Volutpat lacus laoreet non curabitur. Ullamcorper dignissim cras tincidunt
+                                        lobortis
+                                        feugiat vivamus at augue eget. Suscipit adipiscing bibendum est ultricies
+                                        integer
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="single-product-item">
+                                <div class="product-left">
+                                    <img src="./assets/images/product-2.png" alt="">
+                                </div>
+                                <div class="product-right bg-paste">
+                                    <h4>Americano</h4>
+                                    <p>Volutpat lacus laoreet non curabitur. Ullamcorper dignissim cras tincidunt
+                                        lobortis
+                                        feugiat vivamus at augue eget. Suscipit adipiscing bibendum est ultricies
+                                        integer
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="single-product-item">
+                                <div class="product-left">
+                                    <img src="./assets/images/product-1.png" alt="">
+                                </div>
+                                <div class="product-right bg-pink">
+                                    <h4>Americano</h4>
+                                    <p>Volutpat lacus laoreet non curabitur. Ullamcorper dignissim cras tincidunt
+                                        lobortis
+                                        feugiat vivamus at augue eget. Suscipit adipiscing bibendum est ultricies
+                                        integer
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="single-product-item">
+                                <div class="product-left">
+                                    <img src="./assets/images/product-2.png" alt="">
+                                </div>
+                                <div class="product-right bg-paste">
+                                    <h4>Americano</h4>
+                                    <p>Volutpat lacus laoreet non curabitur. Ullamcorper dignissim cras tincidunt
+                                        lobortis
+                                        feugiat vivamus at augue eget. Suscipit adipiscing bibendum est ultricies
+                                        integer
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="all-product-link-wrap">
+                        <a href="#">See all our products here</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Our Product section code -->
 
 
     </div>
