--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="/assets/css/style.min.css" />
     <title>Coffe</title>
 </head>
@@ -100,12 +101,12 @@
                     <div class="headline">
                         <h2>Our Product</h2>
                         <div class="carousel-icons">
-                            <a href=""><i class="fa-solid fa-chevron-left"></i></a>
-                            <a href=""><i class="fa-solid fa-chevron-right"></i></a>
+                            <a class="customPrev"  href=""><i class="fa-solid fa-chevron-left"></i></a>
+                            <a class="customNext" href=""><i class="fa-solid fa-chevron-right"></i></a>
                         </div>
                     </div>
                     <div class="carousel-wrap">
-                        <div class="product-carousel">
+                        <div class="product-carousel owl-carousel">
                             <div class="single-product-item">
                                 <div class="product-left">
                                     <img src="./assets/images/product-1.png" alt="">
@@ -171,6 +172,11 @@
 
 
     </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
