--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-    <link rel="stylesheet" href="/assets/css/style.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.min.css" />
     <title>Coffe</title>
 </head>
 
@@ -21,7 +21,7 @@
         <div class="header-wrap">
             <div class="mainContainer">
                 <nav class="nav">
-                    <a href="" class="logo"><img src="/assets/images/logo.png" alt=""></a>
+                    <a href="" class="logo"><img src="./assets/images/logo.png" alt=""></a>
                     <ul class="menuItems">
                         <li><a href="">Home</a></li>
                         <li><a href="">About</a></li>
@@ -38,7 +38,7 @@
         <section class="banner-section">
             <div class="banner-inner mainContainer">
                 <div class="banner-left">
-                    <img src="/assets/images/banner-bg.jpg" alt="">
+                    <img src="./assets/images/banner-bg.jpg" alt="">
                 </div>
                 <div class="banner-right">
                     <h1>Natural Coffee<span class="lineBr">Roasting</span></h1>
@@ -58,17 +58,17 @@
                     <h2>Why Choosing<span class="lineBr">Our Coffee</span></h2>
                     <div class="list-type-text">
                         <ul>
-                            <li><img src="/assets/images/icon-square-pink.png" alt=""> Excepteur sint occaecat cupidatat
+                            <li><img src="./assets/images/icon-square-pink.png" alt=""> Excepteur sint occaecat cupidatat
                                 non proident</li>
-                            <li><img src="/assets/images/icon-traiangle-pink.png" alt="">Ullamcorper dignissim cras
+                            <li><img src="./assets/images/icon-traiangle-pink.png" alt="">Ullamcorper dignissim cras
                                 tincidunt lobortis feugiat eget.</li>
-                            <li><img src="/assets/images/icon-circle-pink.png" alt="">At lectus urna duis convallis,
+                            <li><img src="./assets/images/icon-circle-pink.png" alt="">At lectus urna duis convallis,
                                 kuat dilakoni ora kuat ditinggal ngopi</li>
                         </ul>
                     </div>
                 </div>
                 <div class="right-img">
-                    <img src="/assets/images/plate-big.png" alt="">
+                    <img src="./assets/images/plate-big.png" alt="">
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
         <section class="quote-section">
             <div class="mainContainer quote-section-inner">
                 <div class="quote">
-                    <img class="icon-quote" src="/assets/images/icon-quote-pink.png" alt="">
+                    <img class="icon-quote" src="./assets/images/icon-quote-pink.png" alt="">
                     <h3>I like coffee because it gives me the <span class="lineBr">illusion that I might be
                             awake.</span></h3>
                     <h4>-Lewis Black-</h4>
@@ -176,7 +176,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
