--- a/index.html
+++ b/index.html
@@ -171,6 +171,54 @@
         <!-- Our Product section code -->
 
 
+
+        <!-- Store section code -->
+
+
+        <section class="store-section">
+            <div class="mainContainer store-section-inner">
+                <div class="heading">
+                    <h2>Our Store</h2>
+                </div>
+                <div class="store">
+                    <div class="single-store-item">
+                        <div class="top-div">
+                            <img src="./assets/images/cvert-card.jpg" alt="">
+                        </div>
+                        <div class="bottom-div">
+                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
+                            <a href="" class="btn store-btn">Visit Now</a>
+                        </div>
+                    </div>
+                    <div class="single-store-item">
+                        <div class="top-div">
+                            <img src="./assets/images/cvert-card.jpg" alt="">
+                        </div>
+                        <div class="bottom-div">
+                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
+                            <a href="" class="btn store-btn">Visit Now</a>
+                        </div>
+                    </div>
+                    <div class="single-store-item">
+                        <div class="top-div">
+                            <img src="./assets/images/cvert-card.jpg" alt="">
+                        </div>
+                        <div class="bottom-div">
+                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
+                            <a href="" class="btn store-btn">Visit Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Store section code -->
+
+
+
+
+
+
     </div>
 
 
