Store section done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="./assets/css/style.min.css" />
     <title>Coffe</title>
 </head>
@@ -58,7 +59,8 @@
                     <h2>Why Choosing<span class="lineBr">Our Coffee</span></h2>
                     <div class="list-type-text">
                         <ul>
-                            <li><img src="./assets/images/icon-square-pink.png" alt=""> Excepteur sint occaecat cupidatat
+                            <li><img src="./assets/images/icon-square-pink.png" alt=""> Excepteur sint occaecat
+                                cupidatat
                                 non proident</li>
                             <li><img src="./assets/images/icon-traiangle-pink.png" alt="">Ullamcorper dignissim cras
                                 tincidunt lobortis feugiat eget.</li>
@@ -101,7 +103,7 @@
                     <div class="headline">
                         <h2>Our Product</h2>
                         <div class="carousel-icons">
-                            <a class="customPrev"  href=""><i class="fa-solid fa-chevron-left"></i></a>
+                            <a class="customPrev" href=""><i class="fa-solid fa-chevron-left"></i></a>
                             <a class="customNext" href=""><i class="fa-solid fa-chevron-right"></i></a>
                         </div>
                     </div>
@@ -186,7 +188,8 @@
                             <img src="./assets/images/cvert-card.jpg" alt="">
                         </div>
                         <div class="bottom-div">
-                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
+                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim
+                                facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
                             <a href="" class="btn store-btn">Visit Now</a>
                         </div>
                     </div>
@@ -195,7 +198,8 @@
                             <img src="./assets/images/cvert-card-2.jpg" alt="">
                         </div>
                         <div class="bottom-div">
-                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
+                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim
+                                facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
                             <a href="" class="btn store-btn">Visit Now</a>
                         </div>
                     </div>
@@ -204,7 +208,8 @@
                             <img src="./assets/images/cvert-card-3.jpg" alt="">
                         </div>
                         <div class="bottom-div">
-                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
+                            <p>Commodo ullamcorper a lacus vestibulum sed. Amet purus gravida quis blandit turpis. Enim
+                                facilisis gravida neque convallis. In iaculis nunc sed augue lacus.</p>
                             <a href="" class="btn store-btn">Visit Now</a>
                         </div>
                     </div>
@@ -214,10 +219,27 @@
 
         <!-- Store section code -->
 
+        <!-- Video section code -->
+        <section class="video-section">
+            <div class="mainContainer video-section-inner">
+                <div class="video">
+                    <div class="left-video">
+                        <div class="video-container">
+                            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/MLpWrANjFbI"
+                            title="Elementor video placeholder" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                        </div>
+                        
+                    </div>
+                    <div class="right-bg-part">
+                       
+                    </div>
+                </div>
+            </div>
+        </section>
 
-
-
-
+        <!-- Video section code -->
 
     </div>
 
