--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
                 <div class="video">
                     <div class="left-video">
                         <div class="video-container">
-                            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/MLpWrANjFbI"
+                            <div class="video-overlay">
+                                <i class="far fa-play-circle play-icon"></i>
+                              </div>
+                            <iframe id="video" width="100%" height="auto" src="https://www.youtube.com/embed/MLpWrANjFbI"
                             title="Elementor video placeholder" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
@@ -245,6 +248,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
