Contact Section done

--- a/index.html
+++ b/index.html
@@ -227,16 +227,60 @@
                         <div class="video-container">
                             <div class="video-overlay">
                                 <i class="far fa-play-circle play-icon"></i>
-                              </div>
-                            <iframe id="video" width="100%" height="auto" src="https://www.youtube.com/embed/MLpWrANjFbI"
-                            title="Elementor video placeholder" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
+                            </div>
+                            <iframe id="video" width="100%" height="auto"
+                                src="https://www.youtube.com/embed/MLpWrANjFbI" title="Elementor video placeholder"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
                         </div>
-                        
+
                     </div>
                     <div class="right-bg-part">
-                       
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Video section code -->
+
+
+        <!-- Video section code -->
+        <section class="contact-section">
+            <div class="mainContainer contact-section-inner">
+                <div class="contact">
+                    <div class="left-bg"></div>
+                    <div class="right-contact-form">
+                        <div class="form-wrapper">
+                            <div class="heading">
+                                <h2>Get In Touch</h2>
+                            </div>
+                            <form action="" id="form">
+                                <div class="input-row">
+                                    <div class="left-input">
+                                        <input type="text" placeholder="Your name" class="form-input">
+                                    </div>
+                                    <div class="right-input">
+                                        <input type="text" placeholder="Email Address" class="form-input">
+                                    </div>
+                                </div>
+                                <div class="input-row">
+                                    <div class="left-input">
+                                        <input type="text" placeholder="Gender" class="form-input">
+                                    </div>
+                                    <div class="right-input">
+                                        <input type="text" placeholder="Address" class="form-input">
+                                    </div>
+                                </div>
+                                <div class="textarea-row">
+                                    <textarea name="message" id="message" rows="10" class="form-input"></textarea>
+                                </div>
+                                <div class="buton-wrap">
+                                    <input type="button" value="Send Message" class="btn">
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
