Subscribe section done

--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
         <!-- Our Product section code -->
 
 
-
         <!-- Store section code -->
 
 
@@ -287,6 +286,40 @@
         </section>
 
         <!-- Video section code -->
+
+
+
+        <!-- subscribe section code -->
+
+
+        <section class="subscribe-section">
+            <div class="mainContainer subscribe-section-inner">
+                <div class="subscribe">
+                    <div class="heading">
+                        <h2>Newsletter</h2>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur.</p>
+                    </div>
+                    <div class="subscribe-form">
+                        <form action="">
+                            <input type="email" placeholder="Email Address">
+                            <input type="button" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- subscribe section code -->
+
+        <!-- Footer section code -->
+        <footer id="Footer">
+            <div class="mainContainer subscribe-section-inner">
+                
+            </div>
+        </footer>
+        <!-- Footer section code -->
+
 
     </div>
 
