fotter and smooth scroll done

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <nav class="nav">
                     <a href="" class="logo"><img src="./assets/images/logo.png" alt=""></a>
                     <ul class="menuItems">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Product</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Shop</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#product">Product</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#store">Shop</a></li>
                         <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
                     </ul>
                 </nav>
@@ -36,7 +36,7 @@
         </div>
         <!-- Nav code end -->
         <!-- Banner section code -->
-        <section class="banner-section">
+        <section class="banner-section" id="home">
             <div class="banner-inner mainContainer">
                 <div class="banner-left">
                     <img src="./assets/images/banner-bg.jpg" alt="">
@@ -53,7 +53,7 @@
         <!-- Banner section code -->
 
         <!-- Choose section code -->
-        <section class="choose-section">
+        <section class="choose-section" id="about">
             <div class="mainContainer choose-section-inner">
                 <div class="left-text">
                     <h2>Why Choosing<span class="lineBr">Our Coffee</span></h2>
@@ -96,7 +96,7 @@
         <!-- Our Product section code -->
 
 
-        <section class="product-section">
+        <section class="product-section" id="product">
             <div class="mainContainer quote-section-inner">
                 <div class="produt-bg"></div>
                 <div class="product">
@@ -176,7 +176,7 @@
         <!-- Store section code -->
 
 
-        <section class="store-section">
+        <section class="store-section" id="store">
             <div class="mainContainer store-section-inner">
                 <div class="heading">
                     <h2>Our Store</h2>
@@ -219,7 +219,7 @@
         <!-- Store section code -->
 
         <!-- Video section code -->
-        <section class="video-section">
+        <section class="video-section" id="blog">
             <div class="mainContainer video-section-inner">
                 <div class="video">
                     <div class="left-video">
@@ -315,7 +315,24 @@
         <!-- Footer section code -->
         <footer id="Footer">
             <div class="mainContainer subscribe-section-inner">
-                
+                <div class="footer-inner">
+                    <div class="footer-left">
+                        <img src="./assets/images/footer-logo.png" alt="">
+                    </div>
+                    <div class="footer-right">
+                        <h4>Social</h4>
+                        <div class="social">
+                            <ul>
+                                <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                                <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright">
+                    &copy; 2023 coffee. All rights reserved.
+                </div>
             </div>
         </footer>
         <!-- Footer section code -->
