--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#product">Product</a></li>
                         <li><a href="#blog">Blog</a></li>
                         <li><a href="#store">Shop</a></li>
-                        <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -246,7 +246,7 @@
 
 
         <!-- Video section code -->
-        <section class="contact-section">
+        <section class="contact-section" id="contact">
             <div class="mainContainer contact-section-inner">
                 <div class="contact">
                     <div class="left-bg"></div>
